# rag-from-scratch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml
backend/: Cargo.toml
docs/: api-design-rationale-v0.0.1.md  data-transfer-v0.0.1.md  frontend-v0.0.1.md  frontend-v0.0.2.md  hld-v0.0.1.md  lld-v0.0.1.md  openapi-v0.0.2.md  schedule-v0.0.1.md
rag-backend-py/: .gitignore  README.md  constants.py  main.py  pyproject.toml  test_filename_display.py
rag-backend-py/api/: __init__.py  chunks.py  embeddings.py  files.py  generation.py  pipeline.py  search.py  system.py  vector_index.py
rag-backend-py/chunking/: __init__.py  character_text_splitter.py  llamaindex_semantics_splitter.py  recursive_character_code_splitter.py  recursive_character_text_splitter.py  service.py
rag-backend-py/database/: __init__.py  models.py  service.py
rag-backend-py/embedding/: __init__.py  bge_m3.py  service.py  sparse_embedding_bm25.py  sparse_embedding_tfidf.py
rag-backend-py/file_loader/: __init__.py  csv_langchain.py  csv_unstructured.py  db_llamaindex.py  dir_langchain.py  dir_llamaindex.py  error.py  img_langchain_unstructured.py  json_langchain_jsonloader.py  md_langchain_unstructured.py  pdf_pypdf.py  pdf_table_camelot.py  pdf_table_llamaparse.py  pdf_table_pdfplumber.py  pdf_table_unstructured.py  pdf_unstructured.py  ppt_unstructured.py  service.py  txt_langchain_textloader.py  web_langchain_webbaseloader.py
rag-backend-py/fixtures/复杂PDF/十大富豪/: merge_csv_to_excel.py
rag-backend-py/fixtures/山西文旅/: 云冈石窟.txt
rag-backend-py/fixtures/黑悟空/: 黑悟空wiki.txt
rag-backend-py/generation/: __init__.py  service.py
rag-backend-py/models/: __init__.py  base.py  chunk.py  document.py  embedding.py  file.py  generation.py  pipeline.py  search.py  system.py  vector_index.py
rag-backend-py/pipeline/: __init__.py  service.py
rag-backend-py/search/: __init__.py  service.py
rag-backend-py/system/: __init__.py  service.py
rag-backend-py/vector_index/: __init__.py  service.py
rag-backend-rs/: Cargo.toml  README.md
rag-web/: package.json  (+3 more)
(+21 files in other folders)
