[workspace]
resolver = "2"
members = ["backend"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = { version = "1.0.79", features = ["derive"] }
thiserror = { version = "2.0.12", features = ["derive"] }
tokio = { version = "1.39.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
