[project]
name = "rag-backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
