[project]
name = "rag-backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot-py>=0.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ghostscript>=0.7",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-unstructured>=0.1.6",
    "llama-index>=0.12.31",
    "llama-index-readers-database>=0.4.0",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.5",
    "pdfplumber>=0.11.6",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "unstructured[image,md,pptx]>=0.17.2",
    "uvicorn>=0.34.2",
]
