[project]
name = "rag-backend-py"
version = "0.1.0"
description = "RAG backend for the RAG project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-unstructured>=0.1.6",
    "llama-index>=0.12.31",
    "llama-index-readers-database>=0.4.0",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.5",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "unstructured[image,md,pptx]>=0.17.2",
    "uvicorn>=0.34.2",
]
